# Map_Optimizer_BMW

map_optimizer/: CMakeLists.txt  README.md  package.xml
map_optimizer/cmake-modules/: FindG2O.cmake
map_optimizer/launch/: map_optimizer.launch  map_optimizer.launch~  map_optimizer_load_opt.launch  run.sh  send_static_transform.launch
map_optimizer/rviz/: map_optmizer.rviz
map_optimizer/src/: graph_manager.cpp  graph_manager.h  main.cpp  map_optimizer.cpp  map_optimizer.h
map_optimizer_msg/: CMakeLists.txt  package.xml
map_optimizer_msg/msg/: OdomSelectList.msg  SelectMode.msg
map_optimizer_select_tool/: CMakeLists.txt  package.xml  plugin_description.xml
map_optimizer_select_tool/include/: MapOptimizerSelectionTool.h
map_optimizer_select_tool/src/: MapOptimizerSelectionTool.cpp
