<package>
  <name>map_optimizer</name>
  <version>1.3.8</version>
  <description>A map optimizer tool </description>
  <author>Tomas XU</author>
  <maintainer email="xu_tao_dragon@msn.com">Tomas XU</maintainer>
  <license>CreativeCommons-by-nc-sa-2.0</license>

  <url>http://ros.org/wiki/gmapping</url>

  <buildtool_depend version_gte="0.5.68">catkin</buildtool_depend>

  <build_depend>nav_msgs</build_depend>
  <build_depend>openslam_gmapping</build_depend>
  <build_depend>visualization_msgs</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rostest</build_depend>
  <build_depend>tf</build_depend>
  <build_depend>laser_geometry</build_depend>
  <build_depend>map_optimizer_msg</build_depend>  
  <build_depend>interactive_markers</build_depend>  

  <run_depend>nav_msgs</run_depend>
  <run_depend>openslam_gmapping</run_depend>
  <run_depend>visualization_msgs</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>tf</run_depend>
  <run_depend>laser_geometry</run_depend>
  <run_depend>map_optimizer_msg</run_depend>
  <run_depend>interactive_markers</run_depend>
</package>
