<?xml version="1.0"?>
<package>

    <name>map_optimizer_msg</name>
    <version>1.0.0</version>
	  <description>
	     RVIZ selection tool to select odometry list for map optimizer.
	  </description>
	  <maintainer email="xx@xx.com">xx</maintainer>
	  <license>xx</license>
	
	  <author>xx</author>

    <buildtool_depend>catkin</buildtool_depend>

    <build_depend>message_generation</build_depend>
    <build_depend>std_msgs</build_depend>

    <run_depend>message_runtime</run_depend>
    <run_depend>std_msgs</run_depend>
</package>
