<package>
  <name>map_optimizer_select_tool</name>
  <version>1.0.0</version>
  <description>
     RVIZ selection tool to select odometry list for map optimizer.
  </description>
  <maintainer email="xx@xx.com">xx</maintainer>
  <license>xx</license>

  <author>xx</author>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>rviz</build_depend>
  <build_depend>pcl</build_depend>
  <build_depend>pcl_ros</build_depend>
  <build_depend>pcl_conversions</build_depend>
  <build_depend>CMakeLists.txt</build_depend>

  <run_depend>rviz</run_depend>
  <run_depend>pcl</run_depend>
  <run_depend>pcl_ros</run_depend>
  <run_depend>pcl_conversions</run_depend>
  <run_depend>CMakeLists.txt</run_depend>

  <export>
      <rviz plugin="${prefix}/plugin_description.xml"/>
  </export>
</package>
